0030416: Incorrect implementation of the method Bnd_OBB::SquareExtent

The method Bnd_OBB::SquareExtent has been corrected.